--- a/style.css
+++ b/style.css
@@ -5,9 +5,23 @@
   --very-pale-blue: hsl(225, 100%, 98%);
   --desaturated-blue: hsl(224, 23%, 55%);
   --dark-blue: hsl(223, 47%, 23%);
-  --weigth: 500;
-  --weigth: 700;
-  --weigth: 900;
+  --weigth-500: 500;
+  --weigth-700: 700;
+  --weigth-900: 900;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 body {
@@ -15,6 +29,138 @@ body {
   font-family: 'Red Hat Display', sans-serif;
 }
 
+.card {
+  width: 100%;
+  height: calc(100vh - .875rem);
+  display: grid;
+  place-content: center;
+  background-color: var(--pale-blue);
+}
+
+.card__container {
+  width: 23rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1.75rem;
+  background-color: white;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+
+.card__containercontent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  padding: 0 2rem;
+}
+
+.card__content {
+  text-align: center;
+}
+
+.card__title {
+  margin-bottom: .7rem;
+  font-size: 1.6em;
+  color: var(--dark-blue);
+  font-weight: var(--weigth-900);
+}
+
+.card__description {
+  line-height: 1.5em;
+  color: var(--desaturated-blue);
+  font-size: .95em;
+}
+
+.card__payment {
+  background-color: var(--very-pale-blue);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-radius: .75rem;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.payment__description {
+  display: inline-flex;
+  align-items: center;
+  gap: .75rem;
+}
+
+.payment__image {
+  width: 2.5rem;
+}
+
+.payment__plan {
+  display: inline-flex;
+  flex-direction: column;
+  gap: .2rem;
+  font-size: .85em;
+  color: var(--desaturated-blue);
+}
+
+.payment__time {
+  font-weight: var(--weigth-900);
+  color: var(--dark-blue);
+}
+
+.payment__changeplan {
+  color: var(--bright-blue);
+  font-size: .75em;
+  font-weight: var(--weigth-900);
+}
+
+.payment__changeplan:hover {
+  text-decoration: none;
+  opacity: .85;
+}
+
+.card__containersbtn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.card__btn--pay {
+  width: 100%;
+  padding: .9rem 2rem;
+  border-radius: .5rem;
+  font-size: .9em;
+  font-weight: var(--weigth-700);
+  color: #fff;
+  border: none;
+  background-color: var(--bright-blue);
+  box-shadow: 0 1rem 3rem .15rem rgb(207, 198, 255);
+}
+
+.card__btn--pay:hover {
+  opacity: .85;
+  cursor: pointer;
+  transition: .25s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.card__brn--cancel {
+  text-align: center;
+  text-decoration: none;
+  color: var(--desaturated-blue);
+  font-size: .9em;
+  font-weight: var(--weigth-700);
+}
+
+.card__brn--cancel:hover {
+  color: var(--dark-blue);
+  transition: color .25s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+
+/* Styles attribution */
 .attribution {
   font-size: 11px;
   text-align: center;
